make it BC based

--- a/sites/partners/.env.template
+++ b/sites/partners/.env.template
@@ -7,6 +7,7 @@ CLOUDINARY_CLOUD_NAME=exygy
 CLOUDINARY_KEY='abcxyz'
 CLOUDINARY_SIGNED_PRESET='test123'
 MAPBOX_TOKEN=
+LANGUAGES=en,fr
 SHOW_SMS_MFA=TRUE
 RECAPTCHA_KEY=
 # how many days till lottery data expires
