--- a/sites/public/.env.template
+++ b/sites/public/.env.template
@@ -6,7 +6,7 @@ LISTINGS_QUERY=/listings
 HOUSING_COUNSELOR_SERVICE_URL=/get-assistance
 NEXTJS_PORT=3000
 MAPBOX_TOKEN=
-LANGUAGES=en,fr
+LANGUAGES=en,fr,zh,tl,vi,es,bn,ar
 RTL_LANGUAGES=ar
 IDLE_TIMEOUT=5
 JURISDICTION_NAME=Bloomington
