--- a/sites/public/.env.template
+++ b/sites/public/.env.template
@@ -9,7 +9,7 @@ MAPBOX_TOKEN=
 LANGUAGES=en,fr,zh,tl,vi,es,bn,ar
 RTL_LANGUAGES=ar
 IDLE_TIMEOUT=5
-JURISDICTION_NAME=Bloomington
+JURISDICTION_NAME=British Columbia
 CLOUDINARY_CLOUD_NAME=exygy
 NEW_RELIC_APP_NAME=Bloom Public
 NEW_RELIC_LICENSE_KEY=
