--- a/.github/workflows/cypress_public.yml
+++ b/.github/workflows/cypress_public.yml
@@ -14,7 +14,7 @@ env:
   CLOUDINARY_KEY: CLOUDINARY_KEY
   PARTNERS_PORTAL_URL: http://localhost:3001
   DATABASE_URL: postgres://bloom-dev:bloom@127.0.0.1:5432/bloom
-  JURISDICTION_NAME: 'Bloomington'
+  JURISDICTION_NAME: 'British Columbia'
   BACKEND_API_BASE: http://localhost:3100
   LISTINGS_QUERY: /listings
   NEXTJS_PORT: 3000
