fix seed, change brand name

--- a/api/.env.template
+++ b/api/.env.template
@@ -18,6 +18,8 @@ APP_SECRET="some-long-secret-key"
 PROXY_URL=
 # the node env the app should be running as
 NODE_ENV=development
+# the name of the jurisdiction to seed
+JURISDICTION_NAME=British Columbia
 # how long a generated multi-factor authentication code should be
 MFA_CODE_LENGTH=5
 # TTL for the mfa code, stored in milliseconds 
