--- a/api/Dockerfile.dbseed
+++ b/api/Dockerfile.dbseed
@@ -18,4 +18,4 @@ RUN yarn install --frozen-lockfile
 COPY --chown=2002:2002 . .
 RUN yarn prisma generate
 
-CMD [ "yarn", "db:seed:staging" ]
+CMD [ "sh", "-c", "yarn db:migration:run && yarn db:seed:staging" ]
